sentinel-ingress/sentinel-admin-cert-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentinel-admin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - admin.myrcan.com
    secretName: tls-secret-ui-admin-prod
  rules:
  - host: admin.myrcan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentinel-ui-admin
          servicePort: 80
      - path: /auth
        backend:
          serviceName: sentinel-ui-sts-service
          servicePort: 80
