sentinel-ingress/sentinel-api-healthmonitoring-cert-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentinel-api-healthmonitoring-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - healthmonitoringapi.myrcan.com
    secretName: tls-secret-api-healthmonitoring-prod
  rules:
  - host: healthmonitoringapi.myrcan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentinel-api-healthmonitoring
          servicePort: 80
      # - path: /api/
      #   backend:
      #     serviceName: sentinel-api-healthmonitoring
      #     servicePort: 80
