sentinel-ingress/sentinel-auth-cert-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentinel-sts-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - auth.myrcan.com
    secretName: tls-secret-sts-prod
  rules:
  - host: auth.myrcan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentinel-ui-sts
          servicePort: 80
