sentinel-ingress/sentinel-comms-cert-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentinel-comms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - comms.myrcan.com
    secretName: tls-secret-comms-prod
  rules:
  - host: comms.myrcan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentinel-api-comms
          servicePort: 80
