sentinel-ingress/sentinel-mongodb-cert-ingress-prod.yaml
# apiVersion: certmanager.k8s.io/v1alpha1
# kind: Certificate
# metadata:
#   name: tls-secret-mongodb-prod
# spec:
#   secretName: tls-secret-mongodb-prod
#   dnsNames:
#   - mongo.db.myrcan.com
#   acme:
#     config:
#     - http01:
#         ingressClass: nginx
#       domains:
#       - mongo.db.myrcan.com
#   issuerRef:
#     name: letsencrypt-prod
#     kind: ClusterIssuer
# ---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentinel-mongodb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mongo.db.myrcan.com
   # secretName: tls-secret-mongodb-prod
  rules:
  - host: mongo.db.myrcan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentinel-db-mongodb
          servicePort: 27017
