sentinel-ingress/sentinel-mssql-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "sentinel-mssql-ingress"
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/tls-acme: true
spec:
  rules:
  - host: mssql.myrcan.com
    http:
      paths:
        - path: /
          backend:
            serviceName: sentinel-mssql-db
            servicePort: 1433
---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: sentinel-product-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   tls:
#   - hosts:
#     - product.myrcan.com
#     secretName: tls-secret-product-prod
#   rules:
#   - host: product.myrcan.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: sentinel-ui-product
#           servicePort: 80
---
# apiVersion: certmanager.k8s.io/v1alpha1
# kind: Certificate
# metadata:
#   name: tls-secret-product-prod
# spec:
#   secretName: tls-secret-product-prod
#   dnsNames:
#   - product.myrcan.com
#   acme:
#     config:
#     - http01:
#         ingressClass: nginx
#       domains:
#       - product.myrcan.com
#   issuerRef:
#     name: letsencrypt-prod
#     kind: ClusterIssuer
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: sentinel-product-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   tls:
#   - hosts:
#     - product.myrcan.com
#     secretName: tls-secret-product-prod
#   rules:
#   - host: product.myrcan.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: sentinel-ui-product
#           servicePort: 80
