sentinel-ingress/sentinel-ui-healthmonitoring-cert-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentinel-ui-healthmonitoring-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - healthmonitoring.myrcan.com
    secretName: tls-secret-ui-healthmonitoring
  rules:
  - host: healthmonitoring.myrcan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentinel-ui-healthmonitoring
          servicePort: 80
